--- a/app/views/attendances/_new.html.erb
+++ b/app/views/attendances/_new.html.erb
@@ -39,7 +39,7 @@
       </div>
     <% end %>
   <div class="extender"></div>
-    <%= f.submit "► #{t('add')}", :class => 'submit-button', :confirm => "#{t('are_you_sure')}" %>
+    <%= f.submit "► #{t('add')}", :class => 'submit-button', :confirm => "#{t('delete_confirm_msg')}" %>
   <% end %>
   
 </div>
