--- a/app/views/batch_transfers/_previous_batch_subjects.erb
+++ b/app/views/batch_transfers/_previous_batch_subjects.erb
@@ -17,7 +17,7 @@
 #specific language governing permissions and limitations
 #under the License. -%>
 
-<h4 style="text-align: center;"><%= t('subject_transfer.previous_batch') %> : <%= @previous_batch.name %></h4>
+<h4 style="text-align: center;"><%= t('previous_batch') %> : <%= @previous_batch.name %></h4>
 <% unless @previous_batch_normal_subject.empty? %>
   <ul id="category-list">
     <div class="linker2">
