--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -43,17 +43,17 @@
       <%= error_messages_for :course %>
 
       <div class="label-field-pair">
-        <div class="label-container"><%= "#{t('course_name')}" %></div>
+        <div class="label-container1"><%= "#{t('course_name')}" %></div>
         <div class="input-container"><%= f.text_field :course_name %></div>
       </div>
 
       <div class="label-field-pair">
-        <div class="label-container"><%= "#{t('section_name')}" %></div>
+        <div class="label-container1"><%= "#{t('section_name')}" %></div>
         <div class="input-container"><%= f.text_field :section_name %></div>
       </div>
 
       <div class="label-field-pair">
-        <div class="label-container"><%= "#{t('code')}" %></div>
+        <div class="label-container1"><%= "#{t('code')}" %></div>
         <div class="input-container"><%= f.text_field :code %></div>
       </div>
 
