--- a/app/views/reminder/index.erb
+++ b/app/views/reminder/index.erb
@@ -59,7 +59,7 @@
           <%= t('subject') %>
         </td>
         <td>
-          <%= t('date') %>
+          <%= t('date_text') %>
         </td>
       </tr>
       <tr class="tr-blank"></tr>
