--- a/app/views/student/profile.erb
+++ b/app/views/student/profile.erb
@@ -84,8 +84,8 @@
   <div id="new_profile_info_top">
     <div class="profile_top_banner"><%= image_tag "master_student/profile/topbanner.png" %></div>
     <table width="700">
-      <tr class="odd left"><td><%= t('admission_date') %></td><td class="right"><%= @student.admission_date.strftime("%d %b, %Y") unless @student.admission_date.nil? %></td></tr>
-      <tr class="even left"><td><%= t('date_of_birth') %></td><td class="right"><%= @student.date_of_birth.strftime("%d %b, %Y") unless @student.date_of_birth.nil? %></td></tr>
+      <tr class="odd left"><td><%= t('admission_date') %></td><td class="right"><%= I18n.l(@student.admission_date,:format=>:normal) unless @student.admission_date.nil? %></td></tr>
+      <tr class="even left"><td><%= t('date_of_birth') %></td><td class="right"><%= I18n.l(@student.date_of_birth,:format=>:normal) unless @student.date_of_birth.nil? %></td></tr>
       <tr class="odd left"><td><%= t('blood_group') %></td><td class="right"><%= @student.blood_group %></td></tr>
       <tr class="even left"><td><%= t('gender') %></td><td class="right"><%= @student.gender_as_text %></td></tr>
 
