--- a/app/views/student_attendance/student.html.erb
+++ b/app/views/student_attendance/student.html.erb
@@ -20,7 +20,7 @@
  <div id="content-header">
   <img src="/images/attendence/attendence.png" />
   <h1><%= t('attendance') %></h1>
-  <h3><%= t('advanced_search') %></h3>
+  <h3><%= t('advanced_search_text') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
