--- a/app/views/user/create.erb
+++ b/app/views/user/create.erb
@@ -66,7 +66,7 @@
       <%= f.hidden_field :role, :value=>'Admin' %>
       <div class="extender"></div>
 
-      <%= submit_tag "", :value => "►#{t('create')}", :class => "user_submit_button" %>
+      <%= submit_tag "", :value => "►#{t('create_text')}", :class => "user_submit_button" %>
       
     </div>
 
