--- a/app/views/user/dashboard.erb
+++ b/app/views/user/dashboard.erb
@@ -105,7 +105,7 @@
       <% end %>
     </div>
     <div class="button-box">
-      <%= link_to "<div class ='button-label'><p>#{t('student.reports.sub_title1')}</p></div>", {:controller => "student", :action => "reports",:id => @student.id},
+      <%= link_to "<div class ='button-label'><p>#{t('academics')}</p></div>", {:controller => "student", :action => "reports",:id => @student.id},
         :class => "option_buttons", :id => "academic_button",:title => "         #{t('academic_report')}   "  %>
     </div>
   <% else %>
