--- a/app/views/batches/edit.html.erb
+++ b/app/views/batches/edit.html.erb
@@ -38,7 +38,7 @@
       <%= link_to "#{t('courses_text')}", courses_path %> &raquo;
       <%= link_to @course.full_name, @course %> &raquo;
       <%= link_to "#{t('batch')} #{@batch.name}" %> &raquo;
-      <%= t('edit') %>
+      <%= t('edit_text') %>
     </div>
 
 
@@ -51,12 +51,12 @@
 
           <div class="label-field-pair">
         <div class="label-container"><%= t('start_date') %></div>
-        <div class="input-container"><%= calendar_date_select_tag 'batch[start_date]',@batch.start_date %></div>
+        <div class="input-container"><%= calendar_date_select_tag 'batch[start_date]',I18n.localize(@batch.start_date, :format=>"%B %e, %Y") %></div>
       </div>
 
       <div class="label-field-pair">
         <div class="label-container"><%= t('end_date') %></div>
-        <div class="input-container"><%= calendar_date_select_tag 'batch[end_date]',@batch.end_date  %></div>
+        <div class="input-container"><%= calendar_date_select_tag 'batch[end_date]',I18n.localize(@batch.end_date, :format=>"%B %e, %Y")  %></div>
       </div>
 
       <%= submit_tag "", :value => "► #{t('save')}", :class => "submit_button" %>
