--- a/app/views/reminder/sent_reminder.erb
+++ b/app/views/reminder/sent_reminder.erb
@@ -56,7 +56,7 @@
           <%= t('subject') %>
         </td>
         <td>
-          <%= t('date') %>
+          <%= t('date_text') %>
         </td>
       </tr>
       <tr class="tr-blank"></tr>
