--- a/public/stylesheets/batches/edit.css
+++ b/public/stylesheets/batches/edit.css
@@ -16,3 +16,15 @@
 .submit_button:hover{
     background:  #373B3F;
 }
+
+.label-container
+{
+    color: #444444;
+    display: block;
+    float: left;
+    font-size: 14px;
+    font-weight: 600;
+    margin: 0 0 10px;
+    padding-top: 10px;
+    width: 200px;
+}
