--- a/public/stylesheets/exam/previous_years_marks_overview.css
+++ b/public/stylesheets/exam/previous_years_marks_overview.css
@@ -141,3 +141,15 @@ padding:5px 5px 5px 10px;
     width:766px;
     overflow: auto;
 }
+#inner-tab-menu ul li {
+    background-color: #9D0E00;
+    color: #FFFFFF;
+    float: left;
+    font-size: 0.9em;
+    height: 1.5em;
+    list-style-type: none;
+    margin: 0 0 0 10px;
+    padding: 0;
+    text-align: center;
+    width: 126px;
+}
