--- a/app/views/configuration/settings.html.erb
+++ b/app/views/configuration/settings.html.erb
@@ -76,6 +76,14 @@
         </div>
       </div>
 
+       <div class="label-field-pair">
+        <label for="configuration_student_attendance_type"><%= "#{t('language') } " %></label>
+        <div class="text-input-bg">
+          <%= select :configuration, :locale, Language.translation_available.map{|lan| [lan.name, lan.code]},
+            :selected => @config[:locale] %>
+        </div>
+      </div>
+
       <div class="label-field-pair">
         <label for="configuration_currency_type"><%= t('currency_type') %></label>
         <div class="text-input-bg">
