--- a/app/views/timetable/_table.html.erb
+++ b/app/views/timetable/_table.html.erb
@@ -43,7 +43,7 @@
       <tr>
         <td class="head">
           <div class="top">
-            <%= t('time') %>
+            <%= t('time_text') %>
           </div>
           <div class="bottom">
             <div class="course">
