--- a/app/views/employee/timetable.erb
+++ b/app/views/employee/timetable.erb
@@ -44,7 +44,7 @@
           <tr>
             <td class="head">
               <div class="top">
-                <%= t('time') %>
+                <%= t('time_text') %>
               </div>
               <div class="bottom">
                 <div class="course">
