--- a/app/views/employee/timetable_pdf.erb
+++ b/app/views/employee/timetable_pdf.erb
@@ -37,7 +37,7 @@
           <tr class="pdf-col">
             <td class="head">
               <div class="top">
-               <%= t('time') %>
+               <%= t('time_text') %>
               </div>
               <div class="bottom">
                 <div class="course">
