7/10/2011  sreeshanth .fedena2.1_translation
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@853 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/change_to_former.erb
+++ b/app/views/student/change_to_former.erb
@@ -47,7 +47,7 @@
       </div>
 
       <div id="submit-button">
-        <%= submit_tag "► #{t('remove')}" %>
+        <%= submit_tag "► #{t('delete')}" %>
       </div>
 
     <% end %>
