--- a/app/views/finance/_master_particulars_list.html.erb
+++ b/app/views/finance/_master_particulars_list.html.erb
@@ -72,4 +72,4 @@
   </table>
 
 <% end%>
-<%= link_to 'Back',{:action => 'master_fees', :batch_id=> @finance_fee_category.batch_id },:class=>'user_button' %>
+<%= link_to "#{t('back')}",{:action => 'master_fees', :batch_id=> @finance_fee_category.batch_id },:class=>'user_button' %>
