--- a/app/views/finance/update_monthly_report.html.erb
+++ b/app/views/finance/update_monthly_report.html.erb
@@ -40,7 +40,7 @@
         <td><%= t('particulars') %></td>
         <td><%= t('expenses') %> ( <%= currency %> )</td>
         <td><%= t('income') %> ( <%= currency %> )</td>
-        <td><%= t('date') %></td>
+        <td><%= t('date_text') %></td>
       </tr>
       <tr class="tr-blank"></tr>
       <% index = 0  %>
