--- a/app/views/reminder/view_reminder.erb
+++ b/app/views/reminder/view_reminder.erb
@@ -41,10 +41,10 @@
   <% end %>
 
   <div id="reminder-body">
-    <div id="reminder-from">From: <%= @sender.nil? ? "User Unavailable" : @sender.full_name %></div>
-    <div id="reminder-date">Sent on: <%= @new_reminder.created_at.strftime("%A, %d %B, %Y") %></div>
-    <div id="reminder-subject">Subject: <%= @new_reminder.subject %></div>
-    <div id="reminder-message"><strong>Message:</strong><br /><br /><%=h @new_reminder.body %></div>
+    <div id="reminder-from"><%= t('from') %>: <%= @sender.nil? ? "User Unavailable" : @sender.full_name %></div>
+    <div id="reminder-date"><%= t('sent_on') %>: <%= @new_reminder.created_at.strftime("%A, %d %B, %Y") %></div>
+    <div id="reminder-subject"><%= t('subject') %>: <%= @new_reminder.subject %></div>
+    <div id="reminder-message"><strong><%= t('message') %>:</strong><br /><br /><%=h @new_reminder.body %></div>
     <div id="reminder-reply">
 
       <%= link_to_function "►#{t('reply')}", :class=>'button' do |page|
