--- a/app/views/finance/_fees_submission_form.erb
+++ b/app/views/finance/_fees_submission_form.erb
@@ -17,7 +17,7 @@
 #specific language governing permissions and limitations
 #under the License. -%>
 <% unless flash[:notice].nil? %>
-  <div id="errorExplanation" class="errorExplanation"><p>There were problems with the following fields:</p><ul><li><%= flash[:notice] %></li></ul></div>
+  <div id="errorExplanation" class="errorExplanation"><p><%= t('there_were_pblm') %></p><ul><li><%= flash[:notice] %></li></ul></div>
 <% end %>
 
 <%if @financefee.transaction_id.nil? and @fine.nil?%>
@@ -31,7 +31,7 @@
   <% unless @fee_particulars.nil? %>
     <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
       <tr class="tr-head">
-        <td>Sl no.</td>
+        <td><%= t('sl_no') %></td>
         <td><%= t('particulars') %></td>
         <td><%= t('amount') %> (<%= currency %>  )</td>
       </tr>
@@ -115,7 +115,7 @@
           <% if @trans.fine_included %>
             <tr class="tr-<%= cycle("odd","even") %>">
               <td class="col-1"><%= @fee_particulars.size+@paid_fees.size+1 %></td>
-              <td class="col-2"><span>Fine</span></td>
+              <td class="col-2"><span><%= t('fine') %></span></td>
               <td class="col-6"><%= @trans.fine_amount %></td>
             </tr>
           <% end %>
@@ -127,7 +127,7 @@
         <tr class="tr-blank"></tr>
         <tr class="tr-<%= cycle("odd","even") %>" cellpadding="1" cellspacing="1">
           <td class="col-1" ></td>
-          <td class="col-1" colspan="2" ><span>Payment Done</span></td>
+          <td class="col-1" colspan="2" ><span><%= t('payment_done') %></span></td>
         </tr>
 
         <% paid = 0 %>
