--- a/app/views/finance/_liability_list.html.erb
+++ b/app/views/finance/_liability_list.html.erb
@@ -22,7 +22,7 @@
   <tr class="tr-head">
     <td><%= t('liability') %></td>
     <td><%= t('created_at') %></td>
-    <td>Total Amount</td>
+    <td><%= t('total_amount') %></td>
     <td></td>
   </tr>
 
@@ -35,8 +35,8 @@
         <td class="col-3"><%=link_to l.created_at.strftime("%d-%m-%Y"),:action =>"each_liability_view",:id => l.id%></td>
         <td class="col-3"><%=  @currency_type + " "%><%= l.amount%></td>
         <td class="col-1">
-          <%= link_to_remote 'Edit', :url => { :action => 'edit_liability', :id => l.id } %> |
-          <%= link_to_remote 'Delete', :url => { :action => 'delete_liability', :id => l.id } %></td>
+          <%= link_to_remote "#{t('edit_text')}", :url => { :action => 'edit_liability', :id => l.id } %> |
+          <%= link_to_remote "#{t('delete')}", :url => { :action => 'delete_liability', :id => l.id } %></td>
       </tr>
     <% else %>
       <tr class="tr-<%= cycle('odd', 'even')%> ">
