--- a/app/views/finance/_student_fees_submission.html.erb
+++ b/app/views/finance/_student_fees_submission.html.erb
@@ -24,7 +24,7 @@
 <% unless @student.student_category.nil? %>
   <div class="name"><%= t('student_category') %></div><div class="val"><span>:</span><%= @student.student_category.name %></div>
 <% else %>
-  <div class="name"><%= t('student_category') %></div><div class="val"><span>:</span>N.A</div>
+  <div class="name"><%= t('student_category') %></div><div class="val"><span>:</span><%= t('n_a') %></div>
 <% end %>
 
 <br />
@@ -72,7 +72,7 @@
         <tr class="tr-blank"></tr>
         <tr class="tr-<%= cycle("odd","even") %>" cellpadding="1" cellspacing="1">
           <td class="col-1" ></td>
-          <td class="col-1" colspan="2"><span>Discount</span></td>
+          <td class="col-1" colspan="2"><span><%= t('discount') %></span></td>
         </tr>
         <% @batch_discounts.each do |d| %>
           <tr class="tr-<%= cycle("odd","even") %>">
@@ -102,7 +102,7 @@
         <tr class="tr-blank"></tr>
 
         <tr class="tr-<%= cycle("odd","even") %>" cellpadding="1" cellspacing="1">
-          <td class="col-8" colspan="2" >Total Discount</td>
+          <td class="col-8" colspan="2" ><%= t('total_discount') %> </td>
           <td class="col-6" ><%= "#{@total_discount} %" %></td>
         </tr>
 
@@ -110,7 +110,7 @@
         <tr class="tr-blank"></tr>
         <% total_fees = (total_fees - ((total_fees*@total_discount)/100)) %>
         <tr class="tr-<%= cycle("odd","even") %>" cellpadding="1" cellspacing="1">
-          <td class="col-8" colspan="2" >Total Fee</td>
+          <td class="col-8" colspan="2" ><%= t('total_fees') %> </td>
           <td class="col-6" ><%= total_fees %></td>
         </tr>
 
@@ -122,7 +122,7 @@
       <% unless @fine.nil? %>
         <tr class="tr-<%= cycle("odd","even") %>">
           <td class="col-1"><%= i+=1 %></td>
-          <td class="col-2"><span>1Fine</span></td>
+          <td class="col-2"><span>1<%= t('fine') %> </span></td>
           <td class="col-6"><%= @fine.to_f %></td>
         </tr>
         <% total_fees += @fine.to_f %>
@@ -149,7 +149,7 @@
     <% unless @paid_fees.nil? %>
         <tr class="tr-<%= cycle("odd","even") %>" cellpadding="1" cellspacing="1">
           <td class="col-1" ></td>
-          <td class="col-1" colspan="2" ><span>Payment Done</span></td>
+          <td class="col-1" colspan="2" ><span><%= t('payment_done') %> </span></td>
 
         </tr>
         <% paid = 0 %>
@@ -157,7 +157,7 @@
           <% paid += p.amount.to_f %>
           <tr class="tr-<%= cycle("odd","even") %>">
             <td class="col-1"><%= i+=1 %></td>
-            <td class="col-2">2Partial Payment on <%= p.transaction_date %></td>
+            <td class="col-2">2<%= t('partial_payment_on') %> <%= p.transaction_date %></td>
             <td class="col-6">-<%= p.amount.to_f %></td>
           </tr>
         <% end %>
