--- a/app/views/finance/_student_fine_submission.html.erb
+++ b/app/views/finance/_student_fine_submission.html.erb
@@ -21,13 +21,13 @@
   <% form_remote_for :fine, :url => {:action => 'update_student_fine_ajax' } do |form| %>
     <div class="fine_info">
       <div class="label-field-pair1">
-        <label> Due date has been exceeded. Please collect fine amount:</label>
+        <label><%= t('due_date_has_been_exceeded') %></label>
         <div class="text-input-bg1"><%= form.text_field :fee, :value=>'' %>
         </div>
         <%= form.hidden_field :student, :value => @student.id %>
         <%= form.hidden_field :date, :value => @date.id %>
 
-        <%=   submit_tag "Add Fine",:class=>'submit_button2' %>
+        <%=   submit_tag "#{t('add_fine')}",:class=>'submit_button2' %>
       </div>
     </div>
   <% end %>
