--- a/app/views/finance/pay_fees_defaulters.html.erb
+++ b/app/views/finance/pay_fees_defaulters.html.erb
@@ -132,7 +132,7 @@
             <% if @trans.fine_included %>
               <tr class="tr-<%= cycle("odd","even") %>">
                 <td class="col-1"><%= i+=1 %></td>
-                <td class="col-2"><span>Fine</span></td>
+                <td class="col-2"><span><%= t('fine') %></span></td>
                 <td class="col-6"><%= @trans.fine_amount %></td>
               </tr>
               <% total_fees += @trans.fine_amount.to_f %>
