--- a/app/views/finance/view_monthly_payslip.html.erb
+++ b/app/views/finance/view_monthly_payslip.html.erb
@@ -56,11 +56,11 @@
         <% grouped_individual_payslip_categories = @payslips[:individual_payslip_category]  unless @payslips[:individual_payslip_category].blank?%>
         <table id="listing" width="100%">
           <tr class="tr-head">
-            <td>Sl</td>
-            <td>Employee</td>
-            <td>Employee No.</td>
-            <td>Net Salary</td>
-            <td>Payslip status</td>
+            <td><%= t('sl_no') %></td>
+            <td><%= t('employee_text') %></td>
+            <td><%= t('employee_no') %></td>
+            <td><%= t('net_salary') %></td>
+            <td><%= t('payslip_status') %></td>
             <td></td>
           </tr>
           <% total_salary = 0 %>
@@ -82,7 +82,7 @@
                   <% emp_payslip = Employee.calculate_salary(payslip,grouped_individual_payslip_category) %>
                   <td class="col-1">  <%="%.2f" %emp_payslip[:net_amount] unless emp_payslip.nil? %></td>
                   <td class="col-1">  <%= payslip.first.status_as_text %></td>
-                  <td class="col-5"><%= link_to "View",{:action=>"view_employee_payslip",:id=>payslip.first.employee_id,:salary_date=>params[:payslip][:salary_date]} %></td>
+                  <td class="col-5"><%= link_to "#{t('view')}",{:action=>"view_employee_payslip",:id=>payslip.first.employee_id,:salary_date=>params[:payslip][:salary_date]} %></td>
                 <% end %>
                 <% total_salary +=  emp_payslip[:net_amount].to_f unless emp_payslip.nil?  %>
                 <% total_approved_salary +=  emp_payslip[:net_amount].to_f if  !emp_payslip.nil? and payslip.first.is_approved  %>
@@ -91,17 +91,17 @@
             <% end %>
           <% end %>
           <tr class="tr-head">
-            <td class="col-1">Total employees: </td>
+            <td class="col-1"><%= t('total_employees') %>: </td>
             <td class="col-1"><%= total_employees %> </td>
-            <td class="col-1">Total salary : </td>
+            <td class="col-1"><%= t('total_salary') %> : </td>
             <td class="col-1"><%="%.2f" %total_salary %></td>
-            <td class="col-1">Approved salary : </td>
+            <td class="col-1"><%= t('approved_salary') %> : </td>
             <td class="col-1"><%="%.2f" %total_approved_salary %></td>
           </tr>
 
         </table>
       <% else %>
-        <div class="no-data">No Payslips found.</div>
+        <div class="no-data"><%= t('no_payslip_found') %></div>
       <% end %>
     <% end %>
   </div>
