--- a/app/views/payroll/edit_payroll_details.erb
+++ b/app/views/payroll/edit_payroll_details.erb
@@ -19,8 +19,8 @@
 
 <div id="content-header">
   <img src="/images/HR/show_hr.png" alt="" />
-  <h1>Edit payroll</h1>
-  <h3>Payroll details </h3>
+  <h1><%= t('edit_payroll') %></h1>
+  <h3><%= t('payroll_details') %></h3>
   <div id="app-back-button">
     <%= link_to_function image_tag("/images/buttons/back.png",:border => 0), "history.back()" %>
   </div>
@@ -43,7 +43,7 @@
 
     <div id ="employee_main_info">
       <h3> <%= @employee.full_name %>  </h3>
-      <h4> Employee ID. : <%= @employee.employee_number %> </h4>
+      <h4><%= t('employee_id') %> : <%= @employee.employee_number %> </h4>
     </div>
 
     <div id="profile-general-info">
