--- a/app/views/user/dashboard.erb
+++ b/app/views/user/dashboard.erb
@@ -28,11 +28,11 @@
 
   <% if @user.admin? %>
     <div class="button-box">
-      <%= link_to '<div class ="button-label"><p>Admission</p></div>', {:controller => "student", :action => "admission1"},
+      <%= link_to "<div class ='button-label'><p>#{t('admission')}</p></div>", {:controller => "student", :action => "admission1"},
         :class => "option_buttons", :id => "admission_button", :title => "Enter Students admission details into the school records"%>
     </div>
     <div class="button-box">
-      <%= link_to '<div class ="button-label"><p>Student Details</p></div>', {:controller => "student", :action => "index"},
+      <%= link_to "<div class ='button-label'><p>#{t('student_details')}</p></div>", {:controller => "student", :action => "index"},
         :class => "option_buttons", :id => "student_details_button", :title => "Search for existing and former students"%>
     </div>
     <div class="button-box">
@@ -45,7 +45,7 @@
 
     </div>
     <div class="button-box">
-      <%= link_to '<div class ="button-label"><p>Examinations</p></div>', {:controller => "exam", :action => "index"},
+      <%= link_to "<div class ='button-label'><p>#{t('examinations')}</p></div>", {:controller => "exam", :action => "index"},
         :class => "option_buttons", :id => "examinations_button",:title => "          Manage Examinations" %>
     </div>
     <div class="button-box">
